Upgrade to GitPA 2.0: Add security scanning, code review, test generation, and refactoring with Gemini 2.0 Flash

--- a/gitPA_v0.1-main/backend/.env.example
+++ b/gitPA_v0.1-main/backend/.env.example
@@ -3,8 +3,9 @@ NODE_ENV=development
 
 # GitHub API Configuration
 # Get this from GitHub Developer Settings -> Personal Access Tokens
+# Required permissions: repo (for public repos) or public_repo (for public only)
 GITHUB_TOKEN=your_github_token_here
 
-# OpenAI API Configuration
-# Get this from OpenAI Platform
-OPENAI_API_KEY=your_openai_api_key_here 
+# Google Gemini API Configuration (FREE - 1500 requests/day)
+# Get this from https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here 
