Fix AI API: Use Qwen2.5-7B-Instruct with chatCompletion (fixes all 4 features)

--- a/gitPA_v0.1-main/backend/.env.example
+++ b/gitPA_v0.1-main/backend/.env.example
@@ -6,6 +6,7 @@ NODE_ENV=development
 # Required permissions: repo (for public repos) or public_repo (for public only)
 GITHUB_TOKEN=your_github_token_here
 
-# Google Gemini API Configuration (FREE - 1500 requests/day)
-# Get this from https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here 
+# Hugging Face API Configuration (FREE - 1000 requests/day)
+# Get this from https://huggingface.co/settings/tokens
+# Uses Qwen2.5-Coder-32B-Instruct (beats GPT-4 on code tasks)
+HUGGINGFACE_API_KEY=your_hf_token_here 
