--- a/gitPA_v0.1-main/backend/package.json
+++ b/gitPA_v0.1-main/backend/package.json
@@ -20,6 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "@babel/parser": "^7.25.0",
+    "@babel/traverse": "^7.25.0",
+    "@babel/types": "^7.25.0",
     "openai": "^4.28.0",
     "zod": "^3.22.4"
   },
