--- a/gitPA_v0.1-main/frontend/package.json
+++ b/gitPA_v0.1-main/frontend/package.json
@@ -21,6 +21,8 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@vercel/node": "^5.5.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "10.4.17",
