--- a/gitPA_v0.1-main/frontend/package.json
+++ b/gitPA_v0.1-main/frontend/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -24,12 +28,15 @@
     "@types/node": "^24.10.1",
     "@vercel/node": "^5.5.7",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/ui": "^4.0.10",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "10.4.17",
+    "happy-dom": "^20.0.10",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vitest": "^4.0.10",
     "vue-tsc": "^2.2.4"
   }
 }
