--- a/gitPA_v0.1-main/frontend/package.json
+++ b/gitPA_v0.1-main/frontend/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
     "highlight.js": "^11.11.1",
+    "jszip": "^3.10.1",
     "marked": "^15.0.8",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
